# StudyBuddyAI

./: .gitattributes  .gitignore  .gitlab-ci.yml  .mdl_style.rb  .pre-commit-config.yaml  CONTRIBUTING.md  CopyFiles.ps1  README.md  copy_files.fish  pyproject.toml  requirements.txt
.gitlab/: changelog_config.yml
.gitlab/merge_request_templates/: Default.md
backEnd/: requirements.txt  running.txt
backEnd/src/ai/: quiz_generator.py  summarizer.py  transcriber.py
backEnd/src/api/: main.py  models.py
backEnd/src/api/routes/: health.py  quiz.py  summarization.py  transcription.py
backEnd/tests/: test_quiz_generator.py  test_summarizer.py  test_transcriber.py
frontEnd/: frontEnd.html
frontend/: package-lock.json
frontend/src/: App.js  StudyBuddyApp.css
frontend/src/services/: api.js
src/api/: main.py
